--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\17\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\19\\tomcat80.properties
 j2ee.server.home=D:/Chuy\u00ean ng\u00e0nh 4/PRJ/apache-tomcat-8.5.84
 j2ee.server.instance=tomcat80:home=D:\\Chuy\u00ean ng\u00e0nh 4\\PRJ\\apache-tomcat-8.5.84
-user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\17\\build.properties
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\19\\build.properties
