--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,17 +31,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jstl-1.2.jar=C:\\Users\\dinhv\\Downloads\\jstl-1.2.jar
-file.reference.mssql-jdbc-12.4.1.jre8-javadoc.jar=C:\\Mark_FPT\\Resource\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.1.jre8-javadoc.jar
-file.reference.mssql-jdbc-12.4.1.jre8-sources.jar=C:\\Mark_FPT\\Resource\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.1.jre8-sources.jar
-file.reference.mssql-jdbc-12.4.1.jre8.jar=C:\\Mark_FPT\\Resource\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.1.jre8.jar
-file.reference.sqljdbc42.jar=C:\\Mark_FPT\\Resource\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
+file.reference.jstl-1.2.jar=../../../../../../Users/dinhv/Downloads/jstl-1.2.jar
+file.reference.mssql-jdbc-12.4.1.jre8-javadoc.jar=../../../../../Resource/sqljdbc_12.4/enu/jars/mssql-jdbc-12.4.1.jre8-javadoc.jar
+file.reference.mssql-jdbc-12.4.1.jre8-sources.jar=../../../../../Resource/sqljdbc_12.4/enu/jars/mssql-jdbc-12.4.1.jre8-sources.jar
+file.reference.mssql-jdbc-12.4.1.jre8.jar=../../../../../Resource/sqljdbc_12.4/enu/jars/mssql-jdbc-12.4.1.jre8.jar
+file.reference.sqljdbc42.jar=../../../../../Resource/sqljdbc_6.0/enu/jre8/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mssql-jdbc-12.4.1.jre8.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -49,7 +49,9 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-12.4.1.jre8-sources.jar}:\
     ${file.reference.mssql-jdbc-12.4.1.jre8.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.jstl-1.2.jar}
+    ${file.reference.jstl-1.2.jar}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -79,6 +81,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
@@ -91,6 +94,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=SWP_Project.war
+war.name=p3.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
